armando estructura y algo de css

--- a/index.html
+++ b/index.html
@@ -9,14 +9,36 @@
 </head>
 <body>
     <header>
+        <picture>
+            <img src="./img/foto-cv.jpg" alt="foto personal">
+        </picture>
+        <div>
+            <h1>John Ruiz</h1>
+            <p>Desarrollador Front-end</p>
+        </div>
         <nav>
             <ul>
-                <li></li>
+                <li><a href="#">información</a></li>
+                <li><a href="#">experiencia</a></li>
+                <li><a href="#">habilidades</a></li>
             </ul>
         </nav>
     </header>
     <main>
-
+        <section id="info-personal">
+            <h2>Información Personal</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae possimus soluta, veniam perferendis ad eaque voluptates. Eaque recusandae magni praesentium.</p>
+        </section>
+        <br>
+        <section id="experiencia">
+            <h2>experiencia</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae possimus soluta, veniam perferendis ad eaque voluptates. Eaque recusandae magni praesentium.</p>
+        </section>
+        <br>
+        <section id="habilidades">
+            <h2>habilidades</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae possimus soluta, veniam perferendis ad eaque voluptates. Eaque recusandae magni praesentium.</p>
+        </section>
     </main>
     <script src="./js/script.js"></script>
 </body>
