--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#info-personal">información</a></li>
                 <li><a href="#experiencia">experiencia</a></li>
                 <li><a href="#habilidades">habilidades</a></li>
-                <li><a href="#habilidades">Contacto</a></li>
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
         <picture>
@@ -115,10 +115,6 @@
         </section>
         <br>
         <section class="container-card" id="habilidades">
-           <!--  <div class="3">
-            <h2>habilidades</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae possimus soluta, veniam perferendis ad eaque voluptates. Eaque recusandae magni praesentium.</p>
-            </div> -->
             <div class="card">
                 <h2 class="card-titulo">Habilidades</h2>
                 <div class="card-datos">
@@ -158,7 +154,52 @@
                 </div>
             </div>
         </section>
+        <br>
+        <section class="container-card" id="contacto">
+            <div class="card">
+                <h2 class="card-titulo">Habilidades</h2>
+                <div class="card-datos">
+                    <div class="datos-basic">
+                        <div class="Datos">
+                            <div class="text-1">Nombre:</div>
+                            <div class="text-1">Apellido:</div>
+                            <div class="text-1">D.N.I.:</div>
+                            <div class="text-1">Fecha Nac.:</div>
+                            <div class="text-1">Tel. Cel.:</div>
+                        </div>
+                        <div class="Datos">
+                            <div class="text-2">Adrián.</div>
+                            <div class="text-2">Encina.</div>
+                            <div class="text-2">34086327</div>
+                            <div class="text-2">23/09/1988.</div>
+                            <div class="text-2">+54 9 (0221) 3613573</div>
+                        </div>
+                    </div>
+                    <div class="datos-basic">
+                        <div class="Datos">
+                            <div class="text-1">Dirección:</div>
+                            <div class="text-1">Localidad:</div>
+                            <div class="text-1">Provincia:</div>
+                            <div class="text-1">País:</div>
+                            <div class="text-1">E-mail:</div>
+                        </div>
+                        <div class="Datos">
+                            <div class="text-2">Calle 47 N°1921.</div>
+                            <div class="text-2">La Plata.</div>
+                            <div class="text-2">Buenos Aires.</div>
+                            <div class="text-2">Argentina.</div>
+                            <div class="text-2">adr.encina@gmail.com</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="./js/script.js"></script>
+    <footer>
+        <div class="container-footer">
+            <h4> Desarrollador por Encina Adrián &copy; 2023 </h4>
+        </div>
+    </footer>
 </body>
 </html>
