cambios en diseño de section informacion.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/4a6ab54212.js" crossorigin="anonymous"></script>
     <title>Curriculum Vitae</title>
 </head>
 <body>
@@ -32,48 +33,53 @@
         </div>
     </header>
     <main>
-        <section class="container-card" id="info-personal">
-            <div class="card">
+        <section class="container-info" id="info-personal">
+            <div class="card-iconos">
                 <h2 class="card-titulo">Información Personal</h2>
-                <div class="card-datos">
-                    <div class="datos-basic">
-                        <div class="Datos">
-                            <div class="text-1">Nombre:</div>
-                            <div class="text-1">Apellido:</div>
-                            <div class="text-1">D.N.I.:</div>
-                            <div class="text-1">Fecha Nac.:</div>
-                            <div class="text-1">Tel. Cel.:</div>
+                <!-- <div class="iconos-panel"> -->
+                    <div class="iconos-card">
+                        <div class="iconos">
+                            <div class="iconos-img">
+                                <i class="fa-sharp fa-solid fa-user"></i>
+                                <h3>Nombre Completo</h3>
+                            </div>
+                            <div class="iconos-img">
+                                <i class="fa-solid fa-calendar-days"></i>
+                                <h3>Fecha Nacimiento</h3>
+                            </div>
+                            <div class="iconos-img">
+                                <i class="fa-solid fa-phone"></i>
+                                <h3>Teléfono</h3>
+                            </div>
+                            <div class="iconos-img">
+                                <i class="fa-sharp fa-solid fa-map-location-dot"></i>
+                                <h3>Dirección</h3>
+                            </div>
+                            <div class="iconos-img">
+                                <i class="fa-solid fa-envelope"></i>
+                                <h3>E-mail</h3>
+                            </div>
                         </div>
-                        <div class="Datos">
+                    </div>
+                <!-- </div> -->
+            </div>
+            <!-- <div class="Datos">
                             <div class="text-2">Adrián.</div>
                             <div class="text-2">Encina.</div>
                             <div class="text-2">34086327</div>
                             <div class="text-2">23/09/1988.</div>
                             <div class="text-2">+54 9 (0221) 3613573</div>
-                        </div>
-                    </div>
-
-                    <div class="datos-basic">
-                        <div class="Datos">
-                            <div class="text-1">Dirección:</div>
-                            <div class="text-1">Localidad:</div>
-                            <div class="text-1">Provincia:</div>
-                            <div class="text-1">País:</div>
-                            <div class="text-1">E-mail:</div>
-                        </div>
-                        <div class="Datos">
+                        </div> -->
+                        <!-- <div class="Datos">
                             <div class="text-2">Calle 47 N°1921.</div>
                             <div class="text-2">La Plata.</div>
                             <div class="text-2">Buenos Aires.</div>
                             <div class="text-2">Argentina.</div>
                             <div class="text-2">adr.encina@gmail.com</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            </section>
+                        </div> -->
+        </section>
         <br>
-        <section class="container-experiencia" id="experiencia">
+        <section class="container" id="experiencia">
             <div >
                 <h2 class="titulo-experiencia">Experiencia Laboral</h2>
             </div>
@@ -114,7 +120,7 @@
             </div>    
         </section>
         <br>
-        <section class="container-card" id="habilidades">
+        <section class="container" id="habilidades">
             <div class="card">
                 <h2 class="card-titulo">Habilidades</h2>
                 <div class="card-datos">
@@ -155,7 +161,7 @@
             </div>
         </section>
         <br>
-        <section class="container-card" id="contacto">
+        <section class="container-contacto" id="contacto">
             <div class="card">
                 <h2 class="card-titulo">Habilidades</h2>
                 <div class="card-datos">
@@ -198,7 +204,7 @@
     <script src="./js/script.js"></script>
     <footer>
         <div class="container-footer">
-            <h4> Desarrollador por Encina Adrián &copy; 2023 </h4>
+            <h4> Desarrollado por Encina Adrián &copy; 2023 </h4>
         </div>
     </footer>
 </body>
