cambios - continuare en unos dias.

--- a/index.html
+++ b/index.html
@@ -35,29 +35,24 @@
     <main>
         <section class="container-info" id="info-personal">
             <div class="card-iconos">
-                <h2 class="card-titulo">Información Personal</h2>
+                <!-- <h2 class="card-titulo">Información Personal</h2> -->
                 <!-- <div class="iconos-panel"> -->
                     <div class="iconos-card">
                         <div class="iconos">
                             <div class="iconos-img">
                                 <i class="fa-sharp fa-solid fa-user"></i>
-                                <h3>Nombre Completo</h3>
                             </div>
                             <div class="iconos-img">
                                 <i class="fa-solid fa-calendar-days"></i>
-                                <h3>Fecha Nacimiento</h3>
                             </div>
                             <div class="iconos-img">
                                 <i class="fa-solid fa-phone"></i>
-                                <h3>Teléfono</h3>
                             </div>
                             <div class="iconos-img">
                                 <i class="fa-sharp fa-solid fa-map-location-dot"></i>
-                                <h3>Dirección</h3>
                             </div>
                             <div class="iconos-img">
                                 <i class="fa-solid fa-envelope"></i>
-                                <h3>E-mail</h3>
                             </div>
                         </div>
                     </div>
